<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_image"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="85dp"
        android:text="@string/button_to_third" />

    <Button
        android:id="@+id/button2"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="182dp"
        android:text="@string/button_to_second" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="403dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="280dp"
        android:text="@string/button_to_fourth" />

</RelativeLayout>