<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/kickOffDice1"
        android:layout_width="93dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="193dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="585dp"
        tools:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/kickOffDice2"
        android:layout_width="93dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="295dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="584dp"
        tools:srcCompat="@drawable/dice_2" />

    <Button
        android:id="@+id/kickOffBtn"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="617dp"
        android:text="@string/button_to_second" />

    <Button
        android:id="@+id/weatherBtn"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="282dp"
        android:text="@string/weather_button" />

    <ImageView
        android:id="@+id/weatherDice1"
        android:layout_width="93dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="193dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="255dp"
        tools:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/weatherDice2"
        android:layout_width="93dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="296dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="255dp"
        tools:srcCompat="@drawable/dice_2" />

    <com.ms.square.android.expandabletextview.ExpandableTextView
        android:id="@+id/expand_text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        expandableTextView:animDuration="200"
        expandableTextView:maxCollapsedLines="1">

        <TextView
            android:id="@id/expandable_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@id/expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="16dp" />
    </com.ms.square.android.expandabletextview.ExpandableTextView>

    <com.ms.square.android.expandabletextview.ExpandableTextView
        android:id="@+id/expand_text_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        expandableTextView:animDuration="200"
        expandableTextView:maxCollapsedLines="1">

        <TextView
            android:id="@id/expandable_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@id/expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="16dp" />
    </com.ms.square.android.expandabletextview.ExpandableTextView>

    <Button
        android:id="@+id/homeButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="33dp"
        android:text="@string/button_to_home" />

</RelativeLayout>